Added OrderType, OrderStatus, DeliveryStatus, and OrderIconType enums added, DeliveryStatus getter and setter added. Changes made to all methods previously implementing OrderType and OrderStatus as strings.